Fix layout issues in the backend

--- a/backend/src/assets/css/agencies.css
+++ b/backend/src/assets/css/agencies.css
@@ -51,6 +51,7 @@ div.agencies .info-box {
     padding: 1px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
   }
 }
 
